--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /KrakenTrader/KrakenTraderLogslog*.txt
+/KrakenTrader/appsettings.json
